[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/PressedBarButton.tres" type="StyleBox" id=1]
[ext_resource path="res://Scripts/HoverBarButton.tres" type="StyleBox" id=2]
[ext_resource path="res://Sprites/Logos/UTOL.png" type="Texture" id=3]
[ext_resource path="res://Scripts/TitleBar.gd" type="Script" id=4]

[sub_resource type="DynamicFontData" id=1]
resource_local_to_scene = true
antialiased = false
font_path = "res://Fonts/ttf/determinationmonoweb-webfont.ttf"

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.180392, 0.180392, 0.360784, 0 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/ttf/arial.ttf"

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 5 )

[node name="Node2D" type="Control"]
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBar" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 24.0
mouse_filter = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UTOL" type="Sprite" parent="TitleBar"]
position = Vector2( 12, 13 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="TitleBar"]
margin_left = 24.0
margin_top = 5.0
margin_right = 295.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "Undertale Online"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -48.0
margin_bottom = 24.0
mouse_filter = 1
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinimizeButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_right = -48.0
margin_bottom = 24.0
mouse_filter = 1
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
text = "âˆ’"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="TitleBar" to="TitleBar" method="_on_TitleBar_gui_input"]
[connection signal="pressed" from="ExitButton" to="TitleBar" method="_on_ExitButton_pressed"]
[connection signal="pressed" from="MinimizeButton" to="TitleBar" method="_on_MinimizeButton_pressed"]
